--- a/index.html
+++ b/index.html
@@ -23,5 +23,13 @@
   <div id="live" class="sr-only" aria-live="polite"></div>
 
   <script src="app.js"></script>
+  <!-- index.html 하단, </body> 태그 직전에 추가 -->
+<footer style="text-align: center; padding: 2rem; border-top: 1px solid var(--border); margin-top: 2rem;">
+  <div style="display: flex; justify-content: center; gap: 2rem; margin-bottom: 1rem;">
+    <a href="privacy.html" style="color: var(--text-muted); text-decoration: none; font-size: 0.875rem;">개인정보 보호정책</a>
+    <a href="terms.html" style="color: var(--text-muted); text-decoration: none; font-size: 0.875rem;">이용약관</a>
+  </div>
+  <p style="color: var(--text-muted); font-size: 0.75rem;">© 2025 Emoji Picker. All rights reserved.</p>
+</footer>
 </body>
 </html>
