--- a/index.html
+++ b/index.html
@@ -5,16 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>이모지 복사 도구 - toolsgov.com</title>
   <link rel="stylesheet" href="styles.css">
-  <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>이모지 복사 도구 - toolsgov.com</title>
-  <link rel="stylesheet" href="styles.css">
   
   <!-- Google AdSense -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3118819479967374"
-     crossorigin="anonymous"></script>
-</head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3118819479967374" crossorigin="anonymous"></script>
 </head>
 <body>
   <header class="header">
