--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3118819479967374" crossorigin="anonymous"></script>
 </head>
 <body>
+  <!-- 상단 광고 -->
+  <div class="ad-top">상단 광고 영역</div>
+  
+  <!-- 좌측 광고 -->
+  <div class="ad-left">좌측 광고</div>
+  
+  <!-- 우측 광고 -->
+  <div class="ad-right">우측 광고</div>
+
   <header class="header">
     <h1 style="text-align: center; color: var(--text-primary); margin: 0; font-size: 1.5rem; font-weight: 600;">
       📋 이모지 복사 도구
@@ -29,11 +38,17 @@
       </div>
     </div>
     
+    <!-- 클립보드와 이모지 사이 광고 -->
+    <div class="ad-middle">중간 광고 영역</div>
+    
     <div id="grid" class="grid" aria-live="polite"></div>
     <div class="actions">
       <button id="more" class="more" hidden>더보기</button>
     </div>
   </main>
+  
+  <!-- 하단 광고 -->
+  <div class="ad-bottom">하단 광고 영역</div>
   
   <div id="toast" class="toast" role="status" aria-live="polite"></div>
   <div id="live" class="sr-only" aria-live="polite"></div>
