--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <footer>
         <p>&copy; 2024 이모지 복사 사이트. 모든 권리 보유.</p>
+        <p class="source-info">데이터 출처: Unicode Consortium | 이모지 데이터는 Google Sheets를 통해 제공됩니다</p>
     </footer>
 
     <div class="toast" id="toast"></div>
