--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="canonical" href="https://your-domain.com/">
     
     <!-- 파비콘 -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     
     <!-- 구조화된 데이터 (JSON-LD) -->
