--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    
+    <!-- 여기에 AdSense 코드 추가 -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3118819479867374" crossorigin="anonymous"></script>
+
+    <!-- 나머지 메타 태그들... -->
     
     <!-- SEO 메타 태그 -->
     <title>이모지 복사 사이트 - 1890개 이모지 무료 복사, 카테고리별 정리</title>
