--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="google-adsense-account" content="ca-pub-3118819479867374">
     
-    <!-- 여기에 AdSense 코드 추가 -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3118819479867374" crossorigin="anonymous"></script>
-
     <!-- 나머지 메타 태그들... -->
     
     <!-- SEO 메타 태그 -->
